--- a/Jupyter/tutorial_01/01_test.ipynb
+++ b/Jupyter/tutorial_01/01_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,6 +105,26 @@
    ],
    "source": [
     "display(x.a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    4\n",
+      "1    5\n",
+      "2    6\n",
+      "Name: b, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.b)"
    ]
   }
  ],
