--- a/Jupyter/tutorial_02/01_file1.ipynb
+++ b/Jupyter/tutorial_02/01_file1.ipynb
@@ -1392,6 +1392,281 @@
     "max_burn = 280\n",
     "df.query('Calories >= @max_burn') # using a variable in the query rather than a number"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Pulse</th>\n",
+       "      <th>Maxpulse</th>\n",
+       "      <th>Calories</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60</td>\n",
+       "      <td>110</td>\n",
+       "      <td>130</td>\n",
+       "      <td>409.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>60</td>\n",
+       "      <td>117</td>\n",
+       "      <td>145</td>\n",
+       "      <td>479.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>60</td>\n",
+       "      <td>103</td>\n",
+       "      <td>135</td>\n",
+       "      <td>340.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45</td>\n",
+       "      <td>109</td>\n",
+       "      <td>175</td>\n",
+       "      <td>282.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>45</td>\n",
+       "      <td>117</td>\n",
+       "      <td>148</td>\n",
+       "      <td>406.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>60</td>\n",
+       "      <td>105</td>\n",
+       "      <td>140</td>\n",
+       "      <td>290.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>60</td>\n",
+       "      <td>110</td>\n",
+       "      <td>145</td>\n",
+       "      <td>300.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>60</td>\n",
+       "      <td>115</td>\n",
+       "      <td>145</td>\n",
+       "      <td>310.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>75</td>\n",
+       "      <td>120</td>\n",
+       "      <td>150</td>\n",
+       "      <td>320.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>75</td>\n",
+       "      <td>125</td>\n",
+       "      <td>150</td>\n",
+       "      <td>330.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>169 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Duration  Pulse  Maxpulse  Calories\n",
+       "0          60    110       130     409.1\n",
+       "1          60    117       145     479.0\n",
+       "2          60    103       135     340.0\n",
+       "3          45    109       175     282.4\n",
+       "4          45    117       148     406.0\n",
+       "..        ...    ...       ...       ...\n",
+       "164        60    105       140     290.8\n",
+       "165        60    110       145     300.4\n",
+       "166        60    115       145     310.2\n",
+       "167        75    120       150     320.4\n",
+       "168        75    125       150     330.4\n",
+       "\n",
+       "[169 rows x 4 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(df)\n",
+    "df.to_stata('stata_file.dta')\n",
+    "df.to_feather('feather_file.feather')\n",
+    "df.to_json('json_file.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(61631.2)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Maxpulse'].mean()\n",
+    "df['Maxpulse'].min()\n",
+    "df['Maxpulse'].max()\n",
+    "df['Maxpulse'].var()\n",
+    "df['Maxpulse'].std()\n",
+    "df['Maxpulse'].count()\n",
+    "df['Calories'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Calories</th>\n",
+       "      <th>Pulse</th>\n",
+       "      <th>Maxpulse</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>50.3</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1860.4</td>\n",
+       "      <td>159.000000</td>\n",
+       "      <td>184.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>107.461538</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Calories       Pulse  Maxpulse\n",
+       "min       50.3   80.000000     100.0\n",
+       "max     1860.4  159.000000     184.0\n",
+       "mean       NaN  107.461538       NaN"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.agg(['mean', 'min', 'max', 'var', 'std', 'count', 'sum'])\n",
+    "df.agg(\n",
+    "    {'Calories': ['min', 'max', ], 'Pulse': ['mean', 'min', 'max', ], 'Maxpulse': ['min', 'max']},\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Calories\n",
+       "300.0    5\n",
+       "500.0    3\n",
+       "275.0    2\n",
+       "300.5    2\n",
+       "374.0    2\n",
+       "        ..\n",
+       "290.8    1\n",
+       "300.4    1\n",
+       "310.2    1\n",
+       "320.4    1\n",
+       "330.4    1\n",
+       "Name: count, Length: 145, dtype: int64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Duration'].unique()\n",
+    "df['Calories'].value_counts()"
+   ]
   }
  ],
  "metadata": {
